--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Winky+Rough:ital,wght@0,300..900;1,300..900&display=swap');
 @import 'tailwindcss';
+
+*{
+  font-family: 'Winky Rough', sans-serif;
+}
